--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -50,8 +50,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/122145-1b6db6-3dbde9-ffffff-db8e1f"
-      target="_blank">https://coolors.co/122145-1b6db6-3dbde9-ffffff-db8e1f</a>
+    <a href="https://coolors.co/122145-1b6db6-3dbde9-e0e6e5-db8e1f"
+      target="_blank">https://coolors.co/122145-1b6db6-3dbde9-e0e6e5-db8e1f</a>
 
     <table class="colors">
       <tr>
@@ -67,7 +67,7 @@
         <td class="secondary">[#122145]</td>
         <td class="accent1">[#DB8E1F]</td>
         <td class="accent2">[#3DBDE9]</td>
-        <td class="accent3">[#FFFFFF]</td>
+        <td class="accent3">[#e0e6e5]</td>
       </tr>
     </table>
 
@@ -81,7 +81,7 @@
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: Roboto
+      Paragraph Font: Playfair Display
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
