--- a/practice/practice.html
+++ b/practice/practice.html
@@ -1,3 +1,39 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles/styles.css">
+</head>
+<body>
+    <header>
+        <h1>Education</h1>
+        <p class="quote">Education is the difference between wishing you could help others & being able to help them</p>
+        <h5>---President Nelson</h5>
+    </header>
+    <main>
+        <h3>
+            1. Faith in the Lord Jesus Christ <br>
+            2. Repentance <br>
+            3. Baptism by immersion for the remission of sins <br>
+            4. Laying on of hands for the gift of the Holy Ghost
+        </h3>
+        <img src="images/nelson.jpeg" alt="Picture of President Nelson">
+        <h2>"Because of the Savior's Atonement, His gospel provides an invitation to keep changing, growing, and becoming more pure."</h2>
+    </main>
+    <footer>
+        <h6>
+            Russell M. Nelson <br>
+            President of the Church of Jesus Christ of Latter-day Saints
+        </h6>
+    </footer>
+</body>
+</html>
+
+
+
+
 <!--
 <!DOCTYPE html>
 <html lang="en">
@@ -24,89 +60,5 @@
     </footer>
 </body>
 </html>
--->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WireFrame Practice</title>
-</head>
-<body>
-    <header>
-        <div>
-            <img src="https://picsum.photos/100/100" alt="logo">
-        </div>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="#">Page 1</a>
-            <a href="#">Page 2</a>
-            <a href="#">Page 3</a>
-        </nav>
-    </header>
-    <main>
-        <div id="banner-box">
-            <section class="banner">
-                <img src="https://picsum.photos/1000/300" alt="banner image desc">
-                <h2>Banner 1 Title</h2>
-                <p>Banner 1 paragraph</p>
-            </section>
-            <section class="banner">
-                <img src="https://picsum.photos/1000/300" alt="banner image desc">
-                <h2>Banner 2 Title</h2>
-                <p>Banner 2 paragraph</p>
-            </section>
-            <section class="banner">
-                <img src="https://picsum.photos/1000/300" alt="banner image desc">
-                <h2>Banner 3 Title</h2>
-                <p>Banner 3 paragraph</p>
-            </section>
-        </div>
-        <div class="product-gallery">
-            <section class="banner">
-                <img src="https://picsum.photos/250/300" alt="product image desc">
-                <h2>Product 1 Title</h2>
-                <p>Product 1 description</p>
-            </section>
-            <section class="banner">
-                <img src="https://picsum.photos/250/300" alt="product image desc">
-                <h2>Product 2 Title</h2>
-                <p>Product 2 description</p>
-            </section>
-            <section class="banner">
-                <img src="https://picsum.photos/250/300" alt="product image desc">
-                <h2>Product 3 Title</h2>
-                <p>Product 3 description</p>
-            </section>
-            <section class="banner">
-                <img src="https://picsum.photos/250/300" alt="product image desc">
-                <h2>Product 4 Title</h2>
-                <p>Product 4 description</p>
-            </section>
-            <section class="banner">
-                <img src="https://picsum.photos/250/300" alt="product image desc">
-                <h2>Product 5 Title</h2>
-                <p>Product 5 description</p>
-            </section>
-            <section class="banner">
-                <img src="https://picsum.photos/250/300" alt="product image desc">
-                <h2>Product 6 Title</h2>
-                <p>Product 6 description</p>
-            </section>
-            <section class="banner">
-                <img src="https://picsum.photos/250/300" alt="product image desc">
-                <h2>Product 7 Title</h2>
-                <p>Product 7 description</p>
-            </section>
-            <section class="banner">
-                <img src="https://picsum.photos/250/300" alt="product image desc">
-                <h2>Product 8 Title</h2>
-                <p>Product 8 description</p>
-            </section>
-        </div>
-    </main>
-    <footer>
 
-    </footer>
-</body>
-</html>
+
