--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,76 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafting to Rapids</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <header>
-        <a id="logo_link" href="index.html">
-            <img class="logo" src="images/raftingtorapids.jpeg" alt="Rafting to Rapids Logo">
-        </a>
-        <nav>
-            <a href="index.html">Home</a>
+    <div id="content">
+        <header>
+            <a id="logo_link" href="index.html">
+                <img class="logo" src="images/raftingtorapids.jpeg" alt="Rafting to Rapids Logo">
+            </a>
+            <nav>
+                <a href="index.html" target="_blank">Home</a>
 
-            <a href="#">Page 2</a>
+                <a href="#" target="_blank">Page 2</a>
 
-            <a href="site-plan-rafting.html">Site Plan</a>
+                <a href="site-plan-rafting.html" target="_blank">Site Plan</a>
 
-            <a href="contactus.html">Contact Us</a>
+                <a href="contactus.html" target="_blank">Contact Us</a>
 
-        </nav>
+            </nav>
 
-    </header>
-    <div id="hero">
-        <div id="hero-box">
-            <img id="hero-img" src="images/hero.png" alt="People enjoying rafting">
-        </div>
-        <section>
-            <h1 class="home-title">Have an Adventure</h1>
-            <h4>Make Memories Rafting to Rapids</h4>
-            <div class="button-box">
-                <a class="book" href="contactus.html">Book Now</a>
+        </header>
+        <div id="hero">
+            <div id="hero-box">
+                <img id="hero-img" src="images/hero.png" alt="People enjoying rafting">
             </div>
-        </section>
-    </div>
-
-    <main class="home-grid">
-        <section class="rivers-card">
-            <img class="card-img" src="images/rivers.jpg" alt="river in forest">
-            <img class="icon" src="images/river_icon.png" alt="river icon">
-            <h2>Rivers</h2>
-        </section>
-        <section class="camping-card">
-            <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
-            <img class="icon" src="images/fire_icon.png" alt="fire icon">
-            <h2>Camping</h2>
-        </section>
-        <section class="rapids-card">
-            <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
-            <img class="icon" src="images/oars.png" alt="oars icon">
-            <h2>Rapids</h2>
-        </section>
-        <img class="mountains" src="images/mountains.jpg" alt="Misty Mountains">
-        <section class="msg">
-            <h2> More Than Just The Thrill</h2>
-            <p>Enjoy the breathtaking scenery. From the valleys, meadows, canyons, and high peaks; it's ways more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-            <a class="join" href="rivers.html">Join Us</a>
-        </section>
-    </main>
-
-    <footer>
-        <p> Rafting to Rapids &copy; 2025 - Brandon Garrett</p>
-        <p><a href="site-plan-rafting.html">Site Plan</a></p>
-        <p><a href="contactus.html">Contact us</a></p>
-        <div class="social">
-            <a href="https://facebook.com">
-                <img src="images/facebook.png" alt="fb icon">
-            </a>
-            <a href="https://twitter.com">
-                <img src="images/twitter.png" alt="twitter icon">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram.png" alt="instagram icon">
-            </a>
+            <section>
+                <h1 class="home-title">Have an Adventure</h1>
+                <h4>Make Memories Rafting to Rapids</h4>
+                <div class="button-box">
+                    <a class="book" href="contactus.html">Book Now</a>
+                </div>
+            </section>
         </div>
-    </footer>
+
+        <main class="home-grid">
+            <section class="rivers-card">
+                <img class="card-img" src="images/rivers.jpg" alt="river in forest">
+                <img class="icon" src="images/river_icon.png" alt="river icon">
+                <h2>Rivers</h2>
+            </section>
+            <section class="camping-card">
+                <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
+                <img class="icon" src="images/fire_icon.png" alt="fire icon">
+                <h2>Camping</h2>
+            </section>
+            <section class="rapids-card">
+                <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
+                <img class="icon" src="images/oars.png" alt="oars icon">
+                <h2>Rapids</h2>
+            </section>
+            <div id="background"></div>
+            <img class="mountains" src="images/mountains.jpg" alt="Misty Mountains">
+            <section class="msg">
+                <h2> More Than Just The Thrill</h2>
+                <p>Enjoy the breathtaking scenery. From the valleys, meadows, canyons, and high peaks; it's ways more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+                <a class="join" href="rivers.html">Join Us</a>
+            </section>
+        </main>
+
+        <footer>
+            <p> Rafting to Rapids &copy; 2025 - Brandon Garrett</p>
+            <p><a href="site-plan-rafting.html">Site Plan</a></p>
+            <p><a href="contactus.html">Contact us</a></p>
+            <div class="social">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/instagram.png" alt="instagram icon">
+                </a>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
