added fonts, paddings, and margins

--- a/practice/practice.html
+++ b/practice/practice.html
@@ -4,33 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/practicestyles.css">
 </head>
 <body>
-    <header>
-        <h1>Education</h1>
-        <p class="quote">Education is the difference between wishing you could help others & being able to help them</p>
-        <h5>---President Nelson</h5>
-    </header>
     <main>
-        <h3>
-            1. Faith in the Lord Jesus Christ <br>
-            2. Repentance <br>
-            3. Baptism by immersion for the remission of sins <br>
-            4. Laying on of hands for the gift of the Holy Ghost
-        </h3>
-        <img src="images/nelson.jpeg" alt="Picture of President Nelson">
-        <h2>"Because of the Savior's Atonement, His gospel provides an invitation to keep changing, growing, and becoming more pure."</h2>
+        <img class="circles" src="images/circles.jpg" alt="circles">
     </main>
+
     <footer>
-        <h6>
-            Russell M. Nelson <br>
-            President of the Church of Jesus Christ of Latter-day Saints
-        </h6>
+        <img class="desk" src="images/desk.jpg" alt="desk">
+        <img class="graphic" src="images/graphic.png" alt="graphic">
+        <img class="person" src="images/person.jpg" alt="person">
     </footer>
 </body>
 </html>
-
 
 
 
@@ -39,7 +26,7 @@
 <html lang="en">
 <head>
     <title>Practice Stuff</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/practicestyles.css">
 </head>
 <body>
     <header>
