--- a/practice/practice.html
+++ b/practice/practice.html
@@ -3,6 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Grid Practice</title>
+    <link rel="stylesheet" href="styles/practicestyles.css">
+</head>
+<body>
+    <div class="main-grid">
+        <h1>Tart & Sweet</h1>
+        <h6>Cherries</h6>
+        <img src="images/w06_cherries.png" alt="cherries">
+
+    </div>
+</body>
+</html>
+
+
+
+<!--
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/practicestyles.css">
 </head>
@@ -21,7 +42,7 @@
 
 
 
-<!--
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
