--- a/wwr/index.html
+++ b/wwr/index.html
@@ -13,14 +13,10 @@
                 <img class="logo" src="images/raftingtorapids.jpeg" alt="Rafting to Rapids Logo">
             </a>
             <nav>
-                <a href="index.html" target="_blank">Home</a>
-
-                <a href="#" target="_blank">Page 2</a>
-
-                <a href="site-plan-rafting.html" target="_blank">Site Plan</a>
-
-                <a href="contactus.html" target="_blank">Contact Us</a>
-
+                <a href="index.html">Home</a>
+                <a href="#">Page 2</a>
+                <a href="site-plan-rafting.html">Site Plan</a>
+                <a href="contactus.html">Contact Us</a>
             </nav>
 
         </header>
@@ -28,7 +24,7 @@
             <div id="hero-box">
                 <img id="hero-img" src="images/hero.png" alt="People enjoying rafting">
             </div>
-            <section>
+            <section id="hero-msg">
                 <h1 class="home-title">Have an Adventure</h1>
                 <h4>Make Memories Rafting to Rapids</h4>
                 <div class="button-box">
