--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -131,9 +131,11 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>Rivers</h3>
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+    <img src="images/Screenshot 2025-02-27 233745.png" alt="Rivers Wireframe">
+
+   
   </main>
 </body>
 
