updated personal site plan

--- a/busd-website/site-plan.html
+++ b/busd-website/site-plan.html
@@ -4,7 +4,7 @@
     
   <head>
     <meta charset="utf-8">
-    <title>Site Plan</title>
+    <title>Bus-D Site Plan</title>
     <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
   </head>
 
@@ -32,7 +32,7 @@
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
       <img src="images/Logo1.png" alt="Logo image">
-      <img src="images/Logo2.png" alt="Alt Logo Image"
+      <img src="images/Logo2.png" alt="Alt Logo Image">
       <hr>
       <h2>
         Style Guide
@@ -85,8 +85,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Contact Us</a>
+        <a href="#">FAQ</a>
       </nav>
       <hr>
       <h2>
@@ -97,10 +97,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Contact Us <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          FAQ  <!-- change this -->
         </div>
 
         <div class="top">
@@ -122,29 +122,35 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        What questions will your visitors expect your site to answer for them?<br><br>
+        The type and quality of work they can expect. On my site they will be able to see a portfolio of past work so they can get an idea of the quality and style of work that I can produce. They will be able to find a page that talks about my requirements and the process of hiring me to do a job for them. Along with that will be an area where they can get in contact with me to begin the process of communication for hiring me. There will also be a page for FAQ’s.<br><br>
+        What types of activities will visitors want to complete on your site?<br><br>
+        The activities visitors will see on my site will include an overview of my favorite works on the homepage, each of them will be linked to the page with all the portfolio that I will have uploaded. Each of the portfolio pieces will include with them a description of my process to make them, the goal the piece was aiming to accomplish, and how I feel the work fulfills the goal it was set out to accomplish.
+
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/art230_p01-mock-up.jpg" alt="image for homepage">
+        <img src="images/bookcover.png" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Contact Me</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Provide ways to get in contact with me 
       </p>
+      <p>email</p>
+      <p>social links</p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/typebooklet.jpg" alt="image for page">
+        <img src="images/poster.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>FAQ</h3>
       <p>
-        [Written copy for the Page 3 here]
+        There will be a page that will be dedicated to providing information on how to get in contact with me. Along with this getting in contact will provide a rough idea of the contract they will be expected to sign when hiring me. This contract will include the pricing of work, and the expectation that the payment will come in three parts. 1) upon hiring 2) upon the sketches being provided 3) completed work. The contract will also state that revisions to any part of the design are allowed, but to a certain extent, upon reaching that extent or adding additional expectations to the workload there will be a discussion on the increase in pricing. If requested there will be a clause allowing for the client to back out at any time along the process, with the expectation that the client has no right to any designs or sketches up until that point. They will only have the right to publish or produce the final product after the final payment has been made.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/businesscard.jpg" alt="image for page3">
+        <img src="images/landscape.jpg" alt="image for page3">
 
       </ul>
       <hr>
