fixed content for pages

--- a/busd-website/site-plan.html
+++ b/busd-website/site-plan.html
@@ -121,33 +121,54 @@
         Content
       </h2>
       <h3>Home page</h3>
-      <p>
-        What questions will your visitors expect your site to answer for them?<br><br>
-        The type and quality of work they can expect. On my site they will be able to see a portfolio of past work so they can get an idea of the quality and style of work that I can produce. They will be able to find a page that talks about my requirements and the process of hiring me to do a job for them. Along with that will be an area where they can get in contact with me to begin the process of communication for hiring me. There will also be a page for FAQ’s.<br><br>
-        What types of activities will visitors want to complete on your site?<br><br>
-        The activities visitors will see on my site will include an overview of my favorite works on the homepage, each of them will be linked to the page with all the portfolio that I will have uploaded. Each of the portfolio pieces will include with them a description of my process to make them, the goal the piece was aiming to accomplish, and how I feel the work fulfills the goal it was set out to accomplish.
-
+      <h2>Welcome to Bus-D Designs</h2>
+      <p class="w1">
+         Your one stop shop for all things design and website related!
       </p>
+      <p class="q1">
+        Need a logo or branding done for a new company? No problem!
+      </p>
+      <p class="q2">
+        Need a website built?<br> See this cool website you're on? Yeah, I built it!
+      </p>
+
       <p>Images for the Home page</p>
         <img src="images/art230_p01-mock-up.jpg" alt="image for homepage">
         <img src="images/bookcover.png" alt="image for homepage">
 
       </ul>
-      <h3>Contact Me</h3>
+      <h3>Contact/About</h3>
       <p>
-        Provide ways to get in contact with me 
+        Hello! I am Bus-D Designs. Currently I am a graphic design student in college. I am just starting to get my freelancing career going to help me gain experience and also to help pay for college. I am grateful that you made it to my website! I hope that you have enjoyed what you have seen so far and that you consider having me do some work for you!<br><br>
+        As you can see from the pieces of work I have throughout my website, I have had the opportunity to make different designs in different styles of work. If you are in need of something that isn't shown, theres a chance I have still done work in it. As I continue to create different designs I will keep posting them here.<br><br>
+        My main emphasis in my studies is User Interface/Experience. I am also studying coding to go along with this, so this entire website was created by me! I know for some that isn't too great of a feat, but as it's my first website that I've built from the ground up, I'm pretty proud of it!
+
       </p>
-      <p>email</p>
-      <p>social links</p>
+      <p>email: busddesigns@proton.me</p>
+      <p>social links:
+      <a href="https://www.instagram.com/busddesign/?hl=en">
+        <img src="images/instagram.jpg" alt="Instagram Logo">
+      </a>
+      <a href="https://www.facebook.com/profile.php?id=61558731148652">
+        <img src="images/facebook.png" alt="Facebook Logo">
+    </a>
+      </p>
       <p>Images for the Page 2</p>
-        <img src="images/typebooklet.jpg" alt="image for page">
-        <img src="images/poster.jpg" alt="image for page">
+        <img src="images/typebooklet.jpg" alt="Cover for a typographic booklet">
+        <img src="images/poster.jpg" alt="Typographic Poster">
 
       </ul>
       <h3>FAQ</h3>
-      <p>
-        There will be a page that will be dedicated to providing information on how to get in contact with me. Along with this getting in contact will provide a rough idea of the contract they will be expected to sign when hiring me. This contract will include the pricing of work, and the expectation that the payment will come in three parts. 1) upon hiring 2) upon the sketches being provided 3) completed work. The contract will also state that revisions to any part of the design are allowed, but to a certain extent, upon reaching that extent or adding additional expectations to the workload there will be a discussion on the increase in pricing. If requested there will be a clause allowing for the client to back out at any time along the process, with the expectation that the client has no right to any designs or sketches up until that point. They will only have the right to publish or produce the final product after the final payment has been made.
-      </p>
+      <h3>How long does it take to get my design?</h3>
+      <p>I do my best to get you your work within 1-2 weeks of hiring me</p>
+      <h3>How much does your work cost?</h3>
+      <p>That depends. When you click on the "Hire Me" button you will then be prompted to fill our your email and a brief discription of what you are wanting me to make. After I see this I will reach out to you to get more specifics. Once that is complete I will send you a document to sign that has the amount along with what I promise to deliver to you.</p>
+      <h3>How do I know you will provide the work?</h3>
+      <p>After discussing payment and what is expected of me, I will provide a document that is meant to ensure both of us stay safe. In the document it is discussed that there will be three payment periods that correspond with parts of the work that I will be providing.</p>
+      <h3>What if we deicde we don't want to continue with the design process?</h3>
+      <p>If during the beginning negotiations you request to, I will ensure that you can pull out at anytime. This is part of the reason there are three payment periods. I will still get paid for work I have done, and you get peace of mind.</p>
+
+
       <p>Images for the Page 3</p>
         <img src="images/businesscard.jpg" alt="image for page3">
         <img src="images/landscape.jpg" alt="image for page3">
