--- a/practice/practice.html
+++ b/practice/practice.html
@@ -3,6 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Practice Doc</title>
+</head>
+<body>
+    <main>
+        <img src="images/cityscape.jpg" alt="City Scape">
+        <h5>3 weeks ago</h5>
+        <h1>Post Three</h1>
+        <p>
+            This would be some text to go here and tell you about this awesome article that they should definetely read. This would be some text to go here and tell you about this awesome article that they should definetely read. This would be some text to go here and tell you about this awesome article that they should definetely read.
+        </p>
+    </main>
+    <footer id="main-grid">
+        <p>5 <sup>m</sup></p>
+        <p class="footer">
+            READ
+        </p>
+        <p>2031</p>
+        <p class="footer">
+            VIEWS
+        </p>
+        <p>15</p>
+        <p class="footer">
+            COMMENTS
+        </p>
+    </footer>
+</body>
+</html>
+
+
+
+
+
+
+
+<!--<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Practice</title>
     <link rel="stylesheet" href="styles/practicestyles.css">
 </head>
@@ -18,7 +57,6 @@
 
 
 
-<!--
 <!DOCTYPE html>
 <html lang="en">
 <head>
