--- a/busd-website/site-plan.html
+++ b/busd-website/site-plan.html
@@ -183,21 +183,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        I either want to have the hero image be a image of my logo that resizes down to the corner when you scroll down, or make it a slideshow of artwork
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/home-wf.jpg" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/contact-wf.jpg" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/faq-wf.jpg" alt="page 3 wireframe">
     </main>
   </body>
 
