forgot to validate, so adding validation fixes

--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -102,8 +102,7 @@
                 <img id="hero-img" src="images/rafting35_1024.jpg" alt="People rafting down a river">
             </div>
             <section id="hero-msg">
-                <h1 class="home-title"></h1>
-                <h4>Contact Us</h4>
+                <h1 class="home-title">Contact Us</h1>
                 <p class="contacttext">
                     Let us know how we can help!
                 </p>
@@ -114,11 +113,11 @@
             <form action="/my-handling-form-page" method="post">
                 <p>
                     <label for="name">Name:</label>
-                    <input type="text" id="name" name="user-name" />
+                    <input type="text" id="name" name="user-name" >
                 </p>
                 <p>
                     <label for="mail">Email</label>
-                    <input type="email" id="mail" name="user-email" />
+                    <input type="email" id="mail" name="user-email" >
                 </p>
                 <p>
                     <label for="msg">Message:</label>
