added html for home, contact, and faq pages

--- a/busd-website/site-plan.html
+++ b/busd-website/site-plan.html
@@ -122,11 +122,12 @@
       </h2>
       <h3>Home page</h3>
       <h2>Welcome to Bus-D Designs</h2>
+      <h3>Whatever your needs,</h3>
       <p class="w1">
-         Your one stop shop for all things design and website related!
+        From pixels to code, I bring ideas to life. Whether you need eye-catching designs or a powerful website, I’m here to make your vision a reality.
       </p>
       <p class="q1">
-        Need a logo or branding done for a new company? No problem!
+        Design meets functionality. I blend creativity and technology to craft stunning visuals and seamless web experiences. Let’s build something great!
       </p>
       <p class="q2">
         Need a website built?<br> See this cool website you're on? Yeah, I built it!
