added styles to home page

--- a/busd-website/contact.html
+++ b/busd-website/contact.html
@@ -12,18 +12,18 @@
             <img class="logo" src="images/Logo2.png" alt="Bus-D Designs Logo">
         </a>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="contact.html">Contact/About</a>
-            <a href="faq.html">FAQ</a>
+            <div class="nav-links">
+                <a href="index.html">Home</a>
+                <a href="contact.html">Contact/About</a>
+                <a href="faq.html">FAQ</a>
+            </div>
+            <a class="order-button" href="contact.html">Order Now</a>
         </nav>
-        <div id="order-button">
-            
-        </div>
     </header>
 
     <!--Hero: multiple pictures? or logo that goes down into small logo, text-->
     <div id="hero">
-        <img id="hero-img" src="" alt="placeholder pic">
+        <!--<img id="hero-img" src="" alt="placeholder pic">-->
         <h1 id="hero-header">Welcome to Bus-D Designs</h1>
         <h2 id="hero-text">Your one stop shop for all things design and website related</h2>
     </div>
@@ -65,17 +65,17 @@
         <div id="feedback"></div>
 
         <!--image 1: image, subtext underneath-->
-        <section id="aimg1">
+        <div id="aimg1">
             <img class="aimg" src="images/typebooklet.jpg" alt="typographic designs">
             <h6 class="img-text">This is only the front page of a booklet I designed. The rest of it is in the slideshow of pictures above. It is based on a talk given by President Dallin H. Oaks at General Conference for The Church of Jesus Christ of Latter-day Saints</h6>
-        </section>
+        </div>
 
         <!--image 2: image, subtext underneath-->
-        <section id="aimg2">
+        <div id="aimg2">
             <img class="aimg" src="images/poster.jpg" alt="Book Cover Design">
             <h6 class="img-text">This design is a typographic poster showcasing the font family of Baskerville MT Pro. It has a variation of font sizes and weights, as well as a description of the origin of the font.</h6>
 
-        </section>
+        </div>
     </main>
 
     <footer>
