--- a/busd-website/faq.html
+++ b/busd-website/faq.html
@@ -12,13 +12,13 @@
             <img class="logo" src="images/Logo2.png" alt="Bus-D Designs Logo">
         </a>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="contact.html">Contact/About</a>
-            <a href="faq.html">FAQ</a>
+            <div class="nav-links">
+                <a href="index.html">Home</a>
+                <a href="contact.html">Contact/About</a>
+                <a href="faq.html">FAQ</a>
+            </div>
+            <a class="order-button" href="contact.html">Order Now</a>
         </nav>
-        <div id="order-button">
-            
-        </div>
     </header>
 
     <main class="main-grid">
@@ -35,17 +35,17 @@
         </section>
 
         <!--image 1: image, subtext underneath-->
-        <section id="himg1">
+        <div id="himg1">
             <img class="himg" src="images/businesscard.jpg" alt="businesscard design">
             <h6 class="img-text">This is an old business card I have designed for myself. Since then I have gotten a better idea of what I wanted for my company.</h6>
-        </section>
+        </div>
 
         <!--image 2: image, subtext underneath-->
-        <section id="himg2">
+        <div id="himg2">
             <img class="himg" src="images/landscape.jpg" alt="landscape">
             <h6 class="img-text">This piece is the most different from all of the designs I have. This made up of 7 different assests that I photoshopped to make into a cohesive artwork.</h6>
 
-        </section>
+        </div>
     </main>
 
     <footer>
