--- a/busd-website/index.html
+++ b/busd-website/index.html
@@ -12,19 +12,19 @@
             <img class="logo" src="images/Logo2.png" alt="Bus-D Designs Logo">
         </a>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="contact.html">Contact/About</a>
-            <a href="faq.html">FAQ</a>
+            <div class="nav-links">
+                <a href="index.html">Home</a>
+                <a href="contact.html">Contact/About</a>
+                <a href="faq.html">FAQ</a>
+            </div>
+            <a class="order-button" href="contact.html">Order Now</a>
         </nav>
-        <div id="order-button">
-            
-        </div>
     </header>
 
     <!--Hero: multiple pictures? or logo that goes down into small logo, text-->
     <div id="hero">
-        <img id="hero-img" src="" alt="placeholder pic">
-        <h1 id="hero-header">Welcome to Bus-D Designs</h1>
+        <!--<img id="hero-img" src="" alt="placeholder pic">-->
+         <h1 id="hero-header">Welcome to Bus-D Designs</h1>
         <h2 id="hero-text">Your one stop shop for all things design and website related</h2>
     </div>
 
@@ -36,10 +36,11 @@
         </section>
 
         <!--image 1: image, subtext underneath-->
-        <section id="himg1">
-            <img class="himg" src="images/art230_p01-mock-up.jpg" alt="typographic designs">
+        <!--change all image tags to divs-->
+        <div id="himg1">
+            <img class="himg-type" src="images/art230_p01-mock-up.jpg" alt="typographic designs">
             <h6 class="img-text">This is a couple of designs made of typographic glyphs. I only used 5-7 glyphs for each design.</h6>
-        </section>
+        </div>
 
         <!--home text 2: header, text-->
         <section id="htext2">
@@ -50,11 +51,11 @@
         </section>
 
         <!--image 2: image, subtext underneath-->
-        <section id="himg2">
-            <img class="himg" src="images/bookcover.png" alt="Book Cover Design">
+        <div id="himg2">
+            <img class="himg-book" src="images/bookcover.png" alt="Book Cover Design">
             <h6 class="img-text">This design is a book cover of Anthem by Ayn Rand. It is meant to showcase one of the books premises of finding one's self</h6>
 
-        </section>
+        </div>
     </main>
 
     <footer>
