--- a/busd-website/faq.html
+++ b/busd-website/faq.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <header>
+    <header id="static-header">
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/Logo2.png" alt="Bus-D Designs Logo">
         </a>
