fixed contact page layout

--- a/busd-website/contact.html
+++ b/busd-website/contact.html
@@ -28,31 +28,31 @@
         <div class="slideshow-container">
             <div class="mySlides fade">
                 <div class="numbertext">1/6</div>
-                <img src="images/slideshow-1.jpg" style="width: 100%">
+                <img src="images/slideshow-1.jpg" alt="slideshow-1" style="width: 100%">
                 <div class="slide-text"></div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext">2/6</div>
-                <img src="images/slideshow-2.jpg" style="width: 100%">
+                <img src="images/slideshow-2.jpg" alt="alideshow-2" style="width: 100%">
             </div>
             <div class="mySlides fade">
                 <div class="numbertext">3/6</div>
-                <img src="images/slideshow-3.jpg" style="width: 100%">
+                <img src="images/slideshow-3.jpg" alt="slideshow-3" style="width: 100%">
                 <div class="slide-text"></div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext">4/6</div>
-                <img src="images/slideshow-4.jpg" style="width: 100%">
+                <img src="images/slideshow-4.jpg" alt="slideshow-4" style="width: 100%">
                 <div class="slide-text"></div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext">5/6</div>
-                <img src="images/slideshow-5.jpg" style="width: 100%">
+                <img src="images/slideshow-5.jpg" alt="slideshow-5" style="width: 100%">
                 <div class="slide-text"></div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext">6/6</div>
-                <img src="images/slideshow-6.jpg" style="width: 100%">
+                <img src="images/slideshow-6.jpg" alt="slideshow-6" style="width: 100%">
                 <div class="slide-text"></div>
             </div>
 
@@ -80,10 +80,22 @@
         <section id="atext1">
             <h3 class="aheader">About</h3>
             <p class="atext"> 
-                Hello! I am Bus-D Designs. Currently I am a graphic design student in college. I am just starting to get my freelancing career going to help me gain experience and also to help pay for college. I am grateful that you made it to my website! I hope that you have enjoyed what you have seen so far and that you consider having me do some work for you!<br><br>
+                Hello! I am Bus-D Designs. Currently I am a graphic design student in college. I am just starting to get my freelancing</p>
+                <!--image 1: image, subtext underneath-->
+                <div id="aimg1">
+                    <img class="aimg" src="images/typebooklet.jpg" alt="typographic designs">
+                    <h6 class="aimgtxt">This is only the front page of a booklet I designed. The rest of it is in the slideshow of pictures above. It is based on a talk given by President Dallin H. Oaks at General Conference for The Church of Jesus Christ of Latter-day Saints</h6>
+                </div>
+            <p class="text2">career going to help me gain experience and also to help pay for college. I am grateful that you made</p>
+            <p class="text2">it to my website! I hope that you have enjoyed what you have seen so far and that you consider having me do some work for you!<br><br>
                 As you can see from the pieces of work I have throughout my website, I have had the opportunity to make different designs in different styles of work. If you are in need of something that isn't shown, theres a chance I have still done work in it. As I continue to create different designs I will keep posting them here.<br><br>
                 My main emphasis in my studies is User Interface/Experience. I am also studying coding to go along with this, so this entire website was created by me! I know for some that isn't too great of a feat, but as it's my first website that I've built from the ground up, I'm pretty proud of it!
             </p>
+         <!--image 2: image, subtext underneath-->
+        <!--<div id="aimg2">
+            <img class="aimg" src="images/poster.jpg" alt="Book Cover Design">
+            <h6 class="img-text">This design is a typographic poster showcasing the font family of Baskerville MT Pro. It has a variation of font sizes and weights, as well as a description of the origin of the font.</h6>
+        </div>-->
         </section>
 
         <div id="contact-form-container">
@@ -108,19 +120,6 @@
         </div>
 
         <div id="feedback"></div>
-
-        <!--image 1: image, subtext underneath-->
-        <div id="aimg1">
-            <img class="aimg" src="images/typebooklet.jpg" alt="typographic designs">
-            <h6 class="img-text">This is only the front page of a booklet I designed. The rest of it is in the slideshow of pictures above. It is based on a talk given by President Dallin H. Oaks at General Conference for The Church of Jesus Christ of Latter-day Saints</h6>
-        </div>
-
-        <!--image 2: image, subtext underneath-->
-        <div id="aimg2">
-            <img class="aimg" src="images/poster.jpg" alt="Book Cover Design">
-            <h6 class="img-text">This design is a typographic poster showcasing the font family of Baskerville MT Pro. It has a variation of font sizes and weights, as well as a description of the origin of the font.</h6>
-
-        </div>
     </main>
 
     <footer>
