--- a/busd-website/faq.html
+++ b/busd-website/faq.html
@@ -21,31 +21,33 @@
         </nav>
     </header>
 
-    <main class="main-grid">
+    <main class="faq-txt">
         <!--faq text 1: questions, answers-->
         <section id="faqtext1">    
             <h3 class="fheader">How long does it take to get my design?</h3>
+        <!--image 1: image, subtext underneath-->
+        <div id="fimg1">
+            <img class="fimg" src="images/businesscard.jpg" alt="businesscard design">
+            <h6 class="img-text">This is an old business card I have designed for myself. Since then I have gotten a better idea of what I wanted for my company.</h6>
+        </div>
             <p class="ftext">I do my best to get you your work within 1-2 weeks of hiring me</p>
             <h3 class="fheader">How much does your work cost?</h3>
             <p class="ftext">That depends. When you click on the "Hire Me" button you will then be prompted to fill our your email and a brief discription of what you are wanting me to make. After I see this I will reach out to you to get more specifics. Once that is complete I will send you a document to sign that has the amount along with what I promise to deliver to you.</p>
             <h3 class="fheader">How do I know you will provide the work?</h3>
+        <!--image 2: image, subtext underneath-->
+        <div id="fimg2">
+            <img class="fimg" src="images/landscape.jpg" alt="landscape">
+            <h6 class="img-text">This piece is the most different from all of the designs I have. This made up of 7 different assests that I photoshopped to make into a cohesive artwork.</h6>
+
+        </div>
             <p class="ftext">After discussing payment and what is expected of me, I will provide a document that is meant to ensure both of us stay safe. In the document it is discussed that there will be three payment periods that correspond with parts of the work that I will be providing.</p>
             <h3 class="fheader">What if we deicde we don't want to continue with the design process?</h3>
             <p class="ftext">If during the beginning negotiations you request to, I will ensure that you can pull out at anytime. This is part of the reason there are three payment periods. I will still get paid for work I have done, and you get peace of mind.</p>
         </section>
 
-        <!--image 1: image, subtext underneath-->
-        <div id="himg1">
-            <img class="himg" src="images/businesscard.jpg" alt="businesscard design">
-            <h6 class="img-text">This is an old business card I have designed for myself. Since then I have gotten a better idea of what I wanted for my company.</h6>
-        </div>
 
-        <!--image 2: image, subtext underneath-->
-        <div id="himg2">
-            <img class="himg" src="images/landscape.jpg" alt="landscape">
-            <h6 class="img-text">This piece is the most different from all of the designs I have. This made up of 7 different assests that I photoshopped to make into a cohesive artwork.</h6>
 
-        </div>
+
     </main>
 
     <footer>
