added responiveness to pages

--- a/busd-website/contact.html
+++ b/busd-website/contact.html
@@ -79,8 +79,7 @@
         <!--about text 1: header, text-->
         <section id="atext1">
             <h3 class="aheader">About</h3>
-            <p class="atext"> 
-                Hello! I am Bus-D Designs. Currently I am a graphic design student in college. I am just starting to get my freelancing</p>
+            <p class="atext">Hello! I am Bus-D Designs. Currently I am a graphic design student in college. I am just starting to get my freelancing</p>
                 <!--image 1: image, subtext underneath-->
                 <div id="aimg1">
                     <img class="aimg" src="images/typebooklet.jpg" alt="typographic designs">
