--- a/busd-website/faq.html
+++ b/busd-website/faq.html
@@ -41,7 +41,7 @@
 
         </div>
             <p class="ftext">After discussing payment and what is expected of me, I will provide a document that is meant to ensure both of us stay safe. In the document it is discussed that there will be three payment periods that correspond with parts of the work that I will be providing.</p>
-            <h3 class="fheader">What if we deicde we don't want to continue with the design process?</h3>
+            <h3 class="fheader">What if we decide we don't want to continue with the design process?</h3>
             <p class="ftext">If during the beginning negotiations you request to, I will ensure that you can pull out at anytime. This is part of the reason there are three payment periods. I will still get paid for work I have done, and you get peace of mind.</p>
         </section>
 
